--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "typescript": "^3.5.3"
   },
   "files": [
+    "dist",
     "/dist/umd/index.js",
     "/dist/es/index.js",
     "/dist/es5m/index.js",
